<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/editMsgTitle"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/messageTitle"
        android:inputType="textShortMessage"
        app:layout_constraintBottom_toTopOf="@+id/editMsgBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editMsgBody"
        android:layout_width="0dp"
        android:layout_height="178dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/messageBody"
        android:inputType="textCapSentences|textMultiLine|textLongMessage"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMsgTitle" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="sendMessage"
        android:text="@string/btn_send"
        app:layout_constraintBottom_toTopOf="@+id/txtDisplayArea"
        app:layout_constraintEnd_toStartOf="@+id/btnMap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMsgBody" />

    <Button
        android:id="@+id/btnMap"
        android:layout_width="137dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_map"
        app:layout_constraintBottom_toTopOf="@+id/txtDisplayArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/editMsgBody"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtDisplayArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/DisplayName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</android.support.constraint.ConstraintLayout>