<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="185dp"
    tools:context=".DisplayMessageActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/txtViewTitle"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/messageTitle"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/txtViewBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewBody"
        android:layout_width="0dp"
        android:layout_height="238dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scrollHorizontally="false"
        android:scrollbars="vertical"
        android:text="@string/messageBody"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/gpsLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitle" />

    <TextView
        android:id="@+id/gpsLocation"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        android:text="@string/gpsLocation"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewBody" />

</android.support.constraint.ConstraintLayout>